# dotbot-lh2-calibration

./: .gitignore  AGENTS.md  README.md  dotbot-v1.emProject  dotbot-v2.emProject  dotbot-v3.emProject  nrf52833dk.emProject  nrf52840dk.emProject  nrf5340dk-app.emProject  pyproject.toml
calibration/: calibration.emProject  main.c
dotbot_lh2/: calibration_exporter.py  lighthouse2.py
dotbot_lh2_calibration/: __init__.py  calibration.py  calibration_app.py  calibration_app.tcss  calibration_cli.py  calibration_exporter.py  lighthouse2.py
dotbot_lh2_calibration/tests/: test_lighthouse2.py
